--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cooking Mama - Romanian Meatball Soup</title>
-  <style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+ 
+
+ <title>Cooking Mama</title>
+  
+
+<style>
     body {
       background-color: lavender;
       font-family: Georgia, Arial, serif;
@@ -53,6 +57,7 @@
 
 
 <body>
+
   <a href="#ingredients">Skip to Ingredients</a> |
   <a href="#directions">Skip to Directions</a> |
   <a href="#contact">Skip to Contact</a>
