--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
 
  <title>Cooking Mama</title>
@@ -82,7 +82,7 @@
     <h2 style="color: darkblue;">Traditional Recipe with a Twist</h2>
       <br>
 
-  <img src="meatball soup in bowl with hot pepper and bread.jpg" alt="meatball soup in bowl with hot pepper and bread" width="333" height="333" style="display: block; margin-left: auto; margin-right: auto;" >
+  <img src="meatball soup in bowl with hot pepper and bread.jpg" alt="meatball soup in bowl with hot pepper and bread" width="333" height="333" style="display: block; margin-left: auto; margin-right: auto;">
 
   <br>
   <br>
@@ -177,7 +177,7 @@
 
     <section aria-labelledby="favorites-heading">
       <h2 id="favorites-heading">My Family's Favorite Seasonal Recipes</h2>
-    <table style="width:70%" align="center">
+    <table>
       <caption hidden>My Family</caption>
       <tr style="background-color: aqua;">
         <th scope="col">Season</th>
