--- a/index.html
+++ b/index.html
@@ -256,22 +256,14 @@ function loseFocus() {
     <br>
 
 
-    
-
-
-
-
-
-
-
-
-
-    <aside aria-labelledby="poll-heading" style="text-align: left;">
+      <aside aria-labelledby="poll-heading" style="text-align: left;">
       <h4 id="poll-heading">Did you like this recipe?</h4>
       <form action="/submit_poll" method="post">
-        <label><input type="radio" name="vote" value="Yes"> Yes</label><br>
+        <fieldset><label><input type="radio" name="vote" value="Yes"> Yes</label>
+          
+          <br>
         <br>
-        <label><input type="radio" name="vote" value="No"> No</label><br>
+        <label><input type="radio" name="vote" value="No"> No</label><br></fieldset>
         <br>
         <button type="submit">Submit</button>
       </form>
