--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h2 style="color: darkblue;">Traditional Recipe with a Twist</h2>
       <br>
 
-  <img src="meatball soup in bowl with hot pepper and bread.jpg" alt="meatball soup in bowl with hot pepper and bread" width="333" height="333" style="display: block; margin-left: auto; margin-right: auto;">
+  <img src="meatballsoupinbowlwithhotpepperandbread.jpg" alt="meatball soup in bowl with hot pepper and bread" width="333" height="333" style="display: block; margin-left: auto; margin-right: auto;">
 
   <br>
   <br>
