--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <br>
 
   <img src="meatballsoupinbowlwithhotpepperandbread.jpg" alt="meatball soup in bowl with hot pepper and bread" width="333" height="333" style="display: block; margin-left: auto; margin-right: auto;">
-
+    <figcaption style="text-align: center; font-size: smaller;">Copyright: https://www.anytacooking.ro/retete/ciorba-de-perisoare</figcaption>
   <br>
   <br>
     </header>
@@ -171,7 +171,7 @@
       <br>
 
       <img src="https://www.wannapik.com/media/W1siZiIsIjIwMTYvMDgvMjIvNXQ4cnJpb214M191MGZpZzV1Ym1fdmMwMDI2MDEucG5nIl1d/d5f7aec4d682c1df/u0fig5ubm_vc002601.png" alt="chef winking giving chef's kiss" style="width:500px;height:333px;margin-left: 0; margin-right: auto;">
-
+      <figcaption style="margin-left: 1.5in; font-size: smaller;">https://www.wannapik.com/media/</figcaption>
       <br>
     </section>
 
@@ -273,7 +273,7 @@ function loseFocus() {
       </form>
       <figure>
         <img src="YesNoBarGraph.png" alt="Bar chart showing votes: Yes and No" width="500" height="300" style="margin-left: 0; margin-right: auto;">
-        <figcaption style="text-align: left;"><a href="Compleximage.html">Figure 1: Poll results to question above</a></figcaption>
+        <figcaption style="text-align: left;"><a href="Complex image.html">Figure 1: Poll results to question above</a></figcaption>
       </figure>
     </aside>
   </main>
