--- a/index.html
+++ b/index.html
@@ -185,25 +185,25 @@
         <th scope="col" colspan="2">Favorite Recipes</th>
       </tr>
       <tr style="background-color:palegreen">
-        <td scope="row">Spring</td>
+        <th scope="row">Spring</th>
         <td>Mom</td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/fit-food" target="_blank">Avocado toast</a></td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/comfort-food" target="_blank">Spinach pie</a></td>
       </tr>
       <tr style="background-color:lightpink">
-        <td scope="row">Summer</td>
+        <th scope="row">Summer</th>
         <td>Me</td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/fit-food" target="_blank">Watermelon salad</a></td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/fish" target="_blank">Grilled trout</a></td>
       </tr>
       <tr style="background-color:burlywood">
-        <td scope="row">Fall</td>
+        <th scope="row">Fall</th>
         <td>Sister</td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/comfort-food">Stuffed peppers</a></td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/chicken" target="_blank">Chicken stew</a></td>
       </tr>
       <tr style="background-color:lightgray">
-        <td scope="row">Winter</td>
+        <th scope="row">Winter</th>
         <td>Dad</td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/pasta" target="_blank">Pasta pudding</a></td>
         <td><a href="https://www.gordonramsay.com/gr/recipes/category/comfort-food" target="_blank">Pork chops</a></td>
@@ -273,7 +273,7 @@ function loseFocus() {
       </form>
       <figure>
         <img src="YesNoBarGraph.png" alt="Bar chart showing votes: Yes and No" width="500" height="300" style="margin-left: 0; margin-right: auto;">
-        <figcaption style="text-align: left;"><a href="Complex image.html">Figure 1: Poll results to question above</a></figcaption>
+        <figcaption style="text-align: left;"><a href="Compleximage.html" target="_blank">Figure 1: Poll results to question above</a></figcaption>
       </figure>
     </aside>
   </main>
