--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     <h2 style="color: darkblue;">Traditional Recipe with a Twist</h2>
       <br>
 
-  <figure role="group">
+  <figure>
       <img src="meatballsoupinbowlwithhotpepperandbread.jpg" alt="meatball soup in bowl with hot pepper and bread" width="333" height="333" style="display: block; margin-left: auto; margin-right: auto;">
-       <figcaption style="font-size: smaller; text-align: center;" aria-label="Copyright:www.anytacooking.ro">Copyright: https://www.anytacooking.ro/retete/ciorba-de-perisoare</figcaption>
+       <figcaption style="font-size: smaller; text-align: center;">Copyright: https://www.anytacooking.ro/retete/ciorba-de-perisoare</figcaption>
   </figure>
   <br>
   <br>
@@ -172,9 +172,9 @@
 
       <br>
 
-      <figure role="group">
+      <figure>
       <img src="https://www.wannapik.com/media/W1siZiIsIjIwMTYvMDgvMjIvNXQ4cnJpb214M191MGZpZzV1Ym1fdmMwMDI2MDEucG5nIl1d/d5f7aec4d682c1df/u0fig5ubm_vc002601.png" alt="chef winking giving chef's kiss" style="width:500px;height:333px;margin-left: 0; margin-right: auto;">
-      <figcaption style="font-size: smaller; text-align:left; margin-left: 1.6in;" aria-label="/www.wannapik.com/media">https://www.wannapik.com/media/</figcaption>
+      <figcaption style="font-size: smaller; text-align:left; margin-left: 1.6in;">https://www.wannapik.com/media/</figcaption>
       </figure>
       <br>
     </section>
