--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </section>
 
     <section aria-labelledby="favorites-heading">
-      <h2 id="favorites-heading">My Family's Favorite Seasonal Recipes</h2>
+      <h2 style="color: darkblue; id="favorites-heading">My Family's Favorite Seasonal Recipes</h2>
     <table>
       <caption hidden>My Family</caption>
       <tr style="background-color: aqua;">
